# xarsed-pp-v0.0.0

./: LICENSE  README.md  pyproject.toml
src/xarsed/common/: common.py  plotting.py  statistical_process.py
src/xarsed/common/data/: GLDAS.nc  MERRA2.nc
src/xarsed/solar/: photovoltaics.py  solar_common.py  solar_graphing.py  solar_scenario.py
src/xarsed/solution/: reporting.py  solution_details.py
